# embreex

./: .env  build.py  pyproject.toml  run.fish  run.sh  setup.py  test_embree4.py
ci/: embree.json
embreex/: __init__.py  mesh_construction.pyx  rtcore.pxd  rtcore.pyx  rtcore_geometry.pxd  rtcore_ray.pxd  rtcore_scene.pxd  rtcore_scene.pyx  triangles.pyx
examples/: intersection.py
