[build-system]
requires = ["poetry-core>=1.0.0", "numpy", "cython>=3.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "embreex"
version = "4.3.1rc0"
description = "Python binding for Intel's Embree ray engine"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "LICENSE"
packages = [{include = "embreex"}]
include = ["embreex/*.pxd", "embreex/*.pyx", "embreex/*.cpp", "embreex/*.h"]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "*"
cython = ">=3.0"

[project]
name = "embreex"
requires-python = ">=3.8"
version = "4.3.1rc0"
dependencies = ["numpy"]
description = "Python binding for Intel's Embree ray engine"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}

[project.urls]
Source = "https://github.com/trimesh/embreex"

[tool.setuptools]
zip-safe = false
include-package-data = false
package-data = {embreex = ["*.pxd", "*.pyx", "*.cpp"]}

[tool.setuptools.packages]
find = {namespaces = false}

[tool.cibuildwheel]
skip =  "pp* *i686 *-win32 *musllinux*"
manylinux-x86_64-image = "manylinux_2_28"
before-test = "pip install pytest"
test-command = "pytest -v {project}/tests"
before-build = "python {project}/ci/fetch-embree.py --install embree4"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel && python {project}\\ci\\fetch-embree.py --install embree4"
repair-wheel-command = "delvewheel repair --add-path embree4\\bin --no-mangle tbb12.dll;embree4.dll -w {dest_dir} {wheel}"
 
[tool.cibuildwheel.macos]
repair-wheel-command = "DYLD_LIBRARY_PATH=embree4/lib delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.linux]
repair-wheel-command = "LD_LIBRARY_PATH=`realpath embree4/lib`; auditwheel repair -w {dest_dir} {wheel}"

[tool.ruff]
select = ["E", "F", # the default rules
          "T201",   # disallow print statements
	   "B",     # pass bugbear
	   "D"]
