[build-system]
requires = ["setuptools>=61.0.0", "wheel", "numpy>=2.2.0", "cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "embreex"
version = "0.2.0"
description = "Python binding for Intel's Embree ray engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "numpy>=2.0.0",
    "cython>=3.0"
]

[project.urls]
Source = "https://github.com/trimesh/embreex"
